realizo ejercicios de javascript nivel 1, estan todos en un script en la carpeta ejercicios js nivel 1

--- a/primer desafío/desafíopokecard/desafio-pokecard-2.html
+++ b/primer desafío/desafíopokecard/desafio-pokecard-2.html
@@ -12,8 +12,8 @@
         
         <img src="lucario.png" style="max-width: 100%; max-height: 100%;" alt="imagen_lucario">
         <ul class="list-poke">
-            <li><strong>Tipo:</strong> Lucha | Acero</li>
-            <li><strong>Debilidad:</strong> Fuego | Tierra</li>
+            <li id="tipo"><strong>Tipo:</strong> Lucha | Acero</li>
+            <li id="2"><strong>Debilidad:</strong> Fuego | Tierra</li>
             <li><strong>Peso:</strong> 54.0 kg</li>
             <li><strong>Altura:</strong> 1.2 mt</li>
             <li>Lucario tiene una habilidad especial conocida como vista aural que le permite ver el aura de las personas y de los Pokémon.</li> 
